# openhab-lightswitch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/: README.txt
main/: CMakeLists.txt  ColorWheel.cpp  ColorWheel.h  EventHandler.cpp  EventHandler.h  Factory.cpp  Factory.h  Flyout.cpp  Flyout.h  Frame.cpp  Frame.h  OpenHabLvglObject.cpp  OpenHabLvglObject.h  SetupApi.cpp  SetupApi.h  SimpleWebServer.cpp  SimpleWebServer.h  Slider.cpp  Slider.h  Switch.cpp  Switch.h  TextDisplay.cpp  TextDisplay.h  back.h  captdns.c  captdns.h  idf_component.yml  lcd.c  lcd.h  main.cpp  main.h
